syntax = "proto3";

package j2cl;

option java_multiple_files = true;
option java_package = "com.google.j2cl.transpiler.backend.wasm";

message Summary {
  repeated string declared_type_map = 1;
  repeated string type_reference_map = 2;
  repeated TypeHierarchyInfo type = 3;
}

message TypeHierarchyInfo {
  int32 declared_type_id = 1;
  int32 extends_declared_type_id = 2;
  repeated int32 implements_declared_type_id = 3;
}
